Treat footer lines in CSV import relative to EOF

BUG: 405817
FIXED-IN: 5.0.4